prueba_templates_flaskv2

--- a/templates/laura/index.html
+++ b/templates/laura/index.html
@@ -3,11 +3,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>FlaskApp</title>
+    <title>Say hello to laura</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <h1>Say hello to laura!</h1>
     <h2>Welcome to FlaskApp!</h2>
     <h3>{{num_aleat}}</h3>
 </body>
 </html>
+
