--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,8 +8,15 @@
 </head>
 <body>
     <h1>Hello World!</h1>
-    <h2>Welcome to FlaskApp!</h2>
-    <h3>{{num_aleat}}</h3>
-    <a href="/hello">Obtener número aleatorio</a><br>
+    <h2>Sesión con el usuario: {{user}}</h2>
+    <h3>Número aleatorio:{{num_aleat}}</h3>
+    <a href="/hello">BOTON DE PRUEBA</a><br>
+    <a href="/entrada">ENTRADA</a><br>
+    <a href="/registro">Login (REGISTRO)</a><br>
+    <a href="/salida">Login-Out (SALIDA)</a><br>
+    <a href="/media_local">Botón de MEDIA de la BBDD Local (ElasticSearch)</a><br>
+    <a href="/media_internet">Botón de MEDIA de la BBDD de Internet (Beebotte)</a><br>
+    <a href="/graficas">Generación de gráficas externas</a><br>
 </body>
 </html>
+
