--- a/templates/index.html
+++ b/templates/index.html
@@ -7,15 +7,14 @@
     <title>FlaskApp</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
-    <h2>Sesión con el usuario: {{user}}</h2>
-    <h3>Número aleatorio:{{num_aleat}}</h3>
+    <h2 class="centeredText">Sesión con el usuario: {{user}}</h2>
+    <h3 class="centeredText">Número aleatorio:{{num_aleat}}</h3>
     <a href="/hello">BOTON DE PRUEBA</a><br>
     <a href="/entrada">ENTRADA</a><br>
     <a href="/registro">Login (REGISTRO)</a><br>
     <a href="/salida">Login-Out (SALIDA)</a><br>
-    <a href="/media_local">Botón de MEDIA de la BBDD Local (ElasticSearch)</a><br>
-    <a href="/media_internet">Botón de MEDIA de la BBDD de Internet (Beebotte)</a><br>
+    <p><a href="/media_local">Botón de MEDIA de la BBDD Local (ElasticSearch)</a><br>&nbsp;&nbsp;&nbsp;&nbsp;El resultado de la media de la BBDD local es: <i>{{mean_local}}</i></p>
+    <p><a href="/media_internet">Botón de MEDIA de la BBDD de Internet (Beebotte)</a><br>&nbsp;&nbsp;&nbsp;&nbsp;El resultado de la media de la BBDD Beebotte es: <i>{{mean_beebotte}}</i></p>
     <a href="/graficas">Generación de gráficas externas</a><br>
 </body>
 </html>
