--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     <h3 class="centeredText">Número aleatorio:{{num_aleat}}</h3>
     <a href="/hello">BOTON DE PRUEBA</a><br>
     <a href="/login">Login (INICIO SESIÓN)</a><br>
-    <a href="/registro">Sign-In (REGISTRO)</a><br>
+    <a href="/signin">Sign-In (REGISTRO)</a><br>
     <a href="/logout">Logout (SALIDA SESIÓN)</a><br>
     <p><a href="/media_local">Botón de MEDIA de la BBDD Local (ElasticSearch)</a><br>&nbsp;&nbsp;&nbsp;&nbsp;El resultado de la media de la BBDD local es: <i>{{mean_local}}</i></p>
     <p><a href="/media_internet">Botón de MEDIA de la BBDD de Internet (Beebotte)</a><br>&nbsp;&nbsp;&nbsp;&nbsp;El resultado de la media de la BBDD Beebotte es: <i>{{mean_beebotte}}</i></p>
