log-sig(in)templates_v3

--- a/templates/indexlogin.html
+++ b/templates/indexlogin.html
@@ -1,10 +1,10 @@
 <html>  
     <head>  
-     <title>login</title>  
+        <title>login</title>  
     </head>  
     <body>  
     <h2> Inicio de sesión (Login) en la Web de Laura</h2>
-     <form method = "POST" action = "./success">  
+     <form method = "POST" action = "./">  
           <table>  
                 <tr><td>Email</td><td><input type = 'email' name = 'email'></td></tr>  
                 <tr><td>Password</td><td><input type = 'password' name = 'pass'></td></tr>  
