--- a/templates/falloiniciosesion.html
+++ b/templates/falloiniciosesion.html
@@ -4,6 +4,6 @@
     </head>  
     <body>   
         <h3>Login fallido, introduzca usuario</h3>  
-        <a href = "/login"></a><br>  
+        <a href = "/login">Volver a Login</a><br>  
     </body>  
  </html> 
