--- a/templates/indexlogin.html
+++ b/templates/indexlogin.html
@@ -4,7 +4,7 @@
     </head>  
     <body>  
     <h2> Inicio de sesión (Login) en la Web de Laura</h2>
-     <form method = "POST" action = "./">  
+     <form method = "POST" action = "./loggeado">  
           <table>  
                 <tr><td>Email</td><td><input type = 'email' name = 'email'></td></tr>  
                 <tr><td>Password</td><td><input type = 'password' name = 'pass'></td></tr>  
