--- a/templates/falloiniciosesion.html
+++ b/templates/falloiniciosesion.html
@@ -1,6 +1,6 @@
 <html>  
     <head>  
-        <title>ENTRADA BIEN</title>  
+        <title>Login Erróneo</title>  
     </head>  
     <body>   
         <h3>Login fallido, introduzca usuario</h3>  
