--- a/templates/indexsignin.html
+++ b/templates/indexsignin.html
@@ -4,7 +4,7 @@
     </head>  
     <body>  
     <h2>Registro (Sign In) en la Web de Laura:</h2>
-     <form method = "POST" action = "./success">  
+     <form method = "POST" action = "./registrado">  
           <table>  
                 <tr><td>Email</td><td><input type = 'email' name = 'email'></td></tr>  
                 <tr><td>Password</td><td><input type = 'password' name = 'pass'></td></tr>  
