--- a/templates/falloregistro.html
+++ b/templates/falloregistro.html
@@ -2,8 +2,10 @@
     <head>  
         <title>Registro Erróneo</title>  
     </head>  
-    <body>   
-        <h3>Registro fallido, introduzca usuario</h3>  
-        <a href = "/signin">Volver a SignIn</a><br>  
+    <body style="background-color:rgb(201, 150, 241)"></body>
+        <div align="center">   
+            <h3>Registro fallido, introduzca usuario</h3>  
+            <a href = "/signin">Volver a SignIn</a><br>  
+        </div>  
     </body>  
  </html> 
