--- a/templates/indexlogout.html
+++ b/templates/indexlogout.html
@@ -2,8 +2,10 @@
     <head>  
         <title>logout</title>  
     </head>  
-    <h2> Cierre de sesión (Logout) en la Web de Laura</h2>
-    <body>   
-        <p>Logout successful, click <a href="/login">here</a> to login again</p>  
+    <body style="background-color:rgb(201, 150, 241)"></body>
+        <div align="center">  
+            <h2>Cierre de sesión (Logout) en la Web de Laura</h2>
+            <p>Logout successful, click <a href="/login">here</a> to login again</p>  
+        </div>
     </body> 
  </html> 
