--- a/templates/falloiniciosesion.html
+++ b/templates/falloiniciosesion.html
@@ -2,8 +2,10 @@
     <head>  
         <title>Login Erróneo</title>  
     </head>  
-    <body>   
-        <h3>Login fallido, introduzca usuario</h3>  
-        <a href = "/login">Volver a Login</a><br>  
+    <body style="background-color:rgb(201, 150, 241)"></body>
+        <div align="center">    
+            <h3>Login fallido, introduzca usuario</h3>  
+            <a href = "/login">Volver a Login</a><br>  
+        </div>  
     </body>  
  </html> 
