--- a/templates/falloregistro_yaloggeado.html
+++ b/templates/falloregistro_yaloggeado.html
@@ -2,8 +2,8 @@
     <head>  
         <title>Registro Erróneo</title>  
     </head>  
-    <body>   
-        <div style="text-align: center"></div>
+    <body style="background-color:rgb(201, 150, 241)"></body>
+        <div align="center">     
             <h3>Registro fallido, usted ya esta resgistrado. Por favor inicie sesión.</h3>  
             <a href = "/login">Login</a><br>  
         </div>
