--- a/templates/indexlogin.html
+++ b/templates/indexlogin.html
@@ -2,14 +2,16 @@
     <head>  
         <title>login</title>  
     </head>  
-    <body>  
-    <h2> Inicio de sesión (Login) en la Web de Laura</h2>
-     <form method = "POST" action = "./loggeado">  
-          <table>  
-                <tr><td>Email</td><td><input type = 'email' name = 'email'></td></tr>  
-                <tr><td>Password</td><td><input type = 'password' name = 'pass'></td></tr>  
-                <tr><td><input type = "submit" value = "Submit"></td></tr>  
-            </table>   
-        </form>  
+    <body style="background-color:rgb(201, 150, 241)"></body>
+        <div align="center">
+            <h2> Inicio de sesión (Login) en la Web de Laura</h2>
+            <form method = "POST" action = "./loggeado">  
+                <table>  
+                        <tr><td>Email</td><td><input type = 'email' name = 'email'></td></tr>  
+                        <tr><td>Password</td><td><input type = 'password' name = 'pass'></td></tr>  
+                        <tr><td><input type = "submit" value = "Submit"></td></tr>  
+                    </table>   
+                </form>  
+        </div>
     </body>  
 </html> 
