--- a/templates/falloregistro_yaloggeado.html
+++ b/templates/falloregistro_yaloggeado.html
@@ -5,7 +5,8 @@
     <body style="background-color:rgb(201, 150, 241)"></body>
         <div align="center">     
             <h3>Registro fallido, usted ya esta resgistrado. Por favor inicie sesión.</h3>  
-            <a href = "/login">Login</a><br>  
+            <a href = "/login">Login</a><br> 
+            <a href = "/">Inicio</a><br> 
         </div>
     </body>  
  </html> 
