--- a/templates/indexlogout.html
+++ b/templates/indexlogout.html
@@ -6,6 +6,7 @@
         <div align="center">  
             <h2>Cierre de sesión (Logout) en la Web de Laura</h2>
             <p>Logout successful, click <a href="/login">here</a> to login again</p>  
+            <a href = "/">Inicio</a><br> 
         </div>
     </body> 
  </html> 
