--- a/templates/falloregistro.html
+++ b/templates/falloregistro.html
@@ -5,7 +5,8 @@
     <body style="background-color:rgb(201, 150, 241)"></body>
         <div align="center">   
             <h3>Registro fallido, introduzca usuario</h3>  
-            <a href = "/signin">Volver a SignIn</a><br>  
+            <a href = "/signin">Volver a SignIn</a><br>
+            <a href = "/">Inicio</a><br>   
         </div>  
     </body>  
  </html> 
