--- a/templates/indexlogin.html
+++ b/templates/indexlogin.html
@@ -11,7 +11,8 @@
                         <tr><td>Password</td><td><input type = 'password' name = 'pass'></td></tr>  
                         <tr><td><input type = "submit" value = "Submit"></td></tr>  
                     </table>   
-                </form>  
+                </form> 
+            <a href = "/">Inicio</a><br>  
         </div>
     </body>  
 </html> 
