--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>LausiApp</title>
 </head>
-<body style="background-color:rgb(201, 150, 241)"></body>
-    <div align="center">
+<body style="background-color:#ddbbf7"></body>
+    <div align="center"; top=50%;>
         <h2 class="centeredText">Sesión con el usuario: {{user}}</h2>
         <h3 class="centeredText">Número aleatorio:{{num_aleat}}</h3>
         <a href="/hello">BOTON DE PRUEBA</a><br>
