--- a/templates/falloregistro.html
+++ b/templates/falloregistro.html
@@ -2,7 +2,7 @@
     <head>  
         <title>Registro Erróneo</title>  
     </head>  
-    <body style="background-color:rgb(201, 150, 241)"></body>
+    <body style="background-color:#ddbbf7"></body>
         <div align="center">   
             <h3>Registro fallido, introduzca usuario</h3>  
             <a href = "/signin">Volver a SignIn</a><br>
