--- a/templates/falloregistro_yaloggeado.html
+++ b/templates/falloregistro_yaloggeado.html
@@ -2,7 +2,7 @@
     <head>  
         <title>Registro Erróneo</title>  
     </head>  
-    <body style="background-color:rgb(201, 150, 241)"></body>
+    <body style="background-color:#ddbbf7"></body>
         <div align="center">     
             <h3>Registro fallido, usted ya esta resgistrado. Por favor inicie sesión.</h3>  
             <a href = "/login">Login</a><br> 
