--- a/templates/indexlogin.html
+++ b/templates/indexlogin.html
@@ -2,7 +2,7 @@
     <head>  
         <title>login</title>  
     </head>  
-    <body style="background-color:rgb(201, 150, 241)"></body>
+    <body style="background-color:#ddbbf7"></body>
         <div align="center">
             <h2> Inicio de sesión (Login) en la Web de Laura</h2>
             <form method = "POST" action = "./loggeado">  
