--- a/templates/indexlogout.html
+++ b/templates/indexlogout.html
@@ -2,7 +2,7 @@
     <head>  
         <title>logout</title>  
     </head>  
-    <body style="background-color:rgb(201, 150, 241)"></body>
+    <body style="background-color:#ddbbf7"></body>
         <div align="center">  
             <h2>Cierre de sesión (Logout) en la Web de Laura</h2>
             <p>Logout successful, click <a href="/login">here</a> to login again</p>  
