--- a/templates/laura/index.html
+++ b/templates/laura/index.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8">
     <title>Say hello to laura</title>
 </head>
-<body>
-    <h1>Say hello to laura!</h1>
-    <h2>Welcome to FlaskApp!</h2>
-    <h3>{{num_aleat}}</h3>
+<body style="background-color:#ddbbf7"></body>
+        <div align="center">
+            <h1>Último número almacenado en las bases de datos</h1>
+            <h2>{{num_aleat}}</h2>
+            <a href="/"><button>Inicio</button></a>
+        </div>  
 </body>
 </html>
 
