--- a/templates/index.html
+++ b/templates/index.html
@@ -5,16 +5,16 @@
     <title>LausiApp</title>
 </head>
 <body style="background-color:#ddbbf7"></body>
-    <div align="center"; top=50%;>
+    <div align="center">
         <h2 class="centeredText">Sesión con el usuario: {{user}}</h2>
         <h3 class="centeredText">Número aleatorio:{{num_aleat}}</h3>
-        <a href="/hello">BOTON DE PRUEBA</a><br>
-        <a href="/login">Login (INICIO SESIÓN)</a><br>
-        <a href="/signin">Sign-In (REGISTRO)</a><br>
-        <a href="/logout">Logout (SALIDA SESIÓN)</a><br>
+        <a href="/hello"><button>último número BBDD</button></a><br>
+        <a href="/login"><button>Login (INICIO SESIÓN)</button></a><br>
+        <a href="/signin"><button>Sign-In (REGISTRO)</button></a><br>
+        <a href="/logout"><button>Logout (SALIDA SESIÓN)</button></a><br>
         <p><a href="/media_local"><button>Botón de MEDIA de la BBDD Local (ElasticSearch)</button></a>&nbsp;&nbsp;&nbsp;&nbsp;<span style="border-image: initial; border: 1px solid black;"><i> {{mean_local}} </i>&nbsp;</span></p>
         <p><a href="/media_internet"><button>Botón de MEDIA de la BBDD de Internet (Beebotte)</button></a>&nbsp;&nbsp;&nbsp;&nbsp;<span style="border-image: initial; border: 1px solid black;"><i> {{mean_beebotte}} </i>&nbsp;</span></p>
-        <a href="/graficas">Generación de gráficas externas</a><br>
+        <a href="/graficas"><button>Generación de gráficas externas</button></a><br>
     </div>
 </body>
 </html>
