--- a/templates/falloregistro.html
+++ b/templates/falloregistro.html
@@ -5,8 +5,8 @@
     <body style="background-color:#ddbbf7"></body>
         <div align="center">   
             <h3>Registro fallido, introduzca usuario</h3>  
-            <a href = "/signin">Volver a SignIn</a><br>
-            <a href = "/">Inicio</a><br>   
+            <a href = "/signin">><button>Volver a SignIn</button></a><br>
+            <a href = "/"><button>Inicio</button></a><br>   
         </div>  
     </body>  
  </html> 
