--- a/templates/falloregistro_yaloggeado.html
+++ b/templates/falloregistro_yaloggeado.html
@@ -5,8 +5,8 @@
     <body style="background-color:#ddbbf7"></body>
         <div align="center">     
             <h3>Registro fallido, usted ya esta resgistrado. Por favor inicie sesión.</h3>  
-            <a href = "/login">Login</a><br> 
-            <a href = "/">Inicio</a><br> 
+            <a href = "/login"><button>Login</button></a><br> 
+            <a href = "/"><button>Inicio</button></a><br> 
         </div>
     </body>  
  </html> 
