--- a/templates/indexsignin.html
+++ b/templates/indexsignin.html
@@ -12,7 +12,7 @@
                         <tr><td><input type = "submit" value = "Submit"></td></tr>  
                     </table>   
                 </form>  
-            <a href = "/">Inicio</a><br> 
+            <a href = "/">><button>Inicio</button></a><br> 
         </div>
     </body>  
 </html> 
