--- a/templates/index.html
+++ b/templates/index.html
@@ -6,14 +6,14 @@
 </head>
 <body style="background-color:#ddbbf7"></body>
     <div align="center">
-        <h2 class="centeredText">Sesión con el usuario: {{user}}</h2>
+        <h2 class="centeredText">Sesión con el usuario:<i>{{user}}</i></h2>
         <h3 class="centeredText">Número aleatorio:{{num_aleat}}</h3>
-        <a href="/hello"><button>último número BBDD</button></a><br>
-        <a href="/login"><button>Login (INICIO SESIÓN)</button></a><br>
-        <a href="/signin"><button>Sign-In (REGISTRO)</button></a><br>
-        <a href="/logout"><button>Logout (SALIDA SESIÓN)</button></a><br>
-        <p><a href="/media_local"><button>Botón de MEDIA de la BBDD Local (ElasticSearch)</button></a>&nbsp;&nbsp;&nbsp;&nbsp;<span style="border-image: initial; border: 1px solid black;"><i> {{mean_local}} </i>&nbsp;</span></p>
-        <p><a href="/media_internet"><button>Botón de MEDIA de la BBDD de Internet (Beebotte)</button></a>&nbsp;&nbsp;&nbsp;&nbsp;<span style="border-image: initial; border: 1px solid black;"><i> {{mean_beebotte}} </i>&nbsp;</span></p>
+        <a href="/hello"><button style="width:200px;height:20px" >Último número BBDD</button></a><br><br>
+        <a href="/login"><button style="width:200px;height:20px">Login (INICIO SESIÓN)</button></a><br><br>
+        <a href="/signin"><button style="width:200px;height:20px">Sign-In (REGISTRO)</button></a><br><br>
+        <a href="/logout"><button style="width:200px;height:20px">Logout (SALIDA SESIÓN)</button></a><br><br>
+        <p><a href="/media_local"><button style="width:400px;height:20px">Botón de MEDIA de la BBDD Local (ElasticSearch)</button></a>&nbsp;&nbsp;&nbsp;&nbsp;<span style="border-image: initial; border: 1px solid black;"><i> {{mean_local}} </i>&nbsp;</span></p><br>
+        <p><a href="/media_internet"><button style="width:400px;height:20px">Botón de MEDIA de la BBDD de Internet (Beebotte)</button></a>&nbsp;&nbsp;&nbsp;&nbsp;<span style="border-image: initial; border: 1px solid black;"><i> {{mean_beebotte}} </i>&nbsp;</span></p><br>
         <a href="/graficas"><button>Generación de gráficas externas</button></a><br>
     </div>
 </body>
