--- a/templates/falloiniciosesion.html
+++ b/templates/falloiniciosesion.html
@@ -2,7 +2,7 @@
     <head>  
         <title>Login Erróneo</title>  
     </head>  
-    <body style="background-color:rgb(201, 150, 241)"></body>
+    <body style="background-color:#ddbbf7"></body>
         <div align="center">    
             <h3>Login fallido, introduzca usuario</h3>  
             <a href = "/login">Volver a Login</a><br>  
