--- a/templates/falloinicio_logged.html
+++ b/templates/falloinicio_logged.html
@@ -4,8 +4,8 @@
     </head>  
     <body style="background-color:#ddbbf7"></body>
         <div align="center">    
-            <h3>Login fallido, introduzca usuario</h3>  
-            <a href = "/login"><button> Volver a Login</button></a><br>  
+            <h3>Used ya está loggeado</h3>  
+            <a href = "/logout"><button>Logout</button></a><br>  
             <a href = "/"><button> Volver al Inicio</button></a><br>
         </div>  
     </body>  
