--- a/templates/falloregistro_yaloggeado.html
+++ b/templates/falloregistro_yaloggeado.html
@@ -4,7 +4,7 @@
     </head>  
     <body style="background-color:#ddbbf7"></body>
         <div align="center">     
-            <h3>Registro fallido, usted ya esta resgistrado. Por favor inicie sesión.</h3>  
+            <h3>Registro fallido, usted ya esta registrado. Por favor inicie sesión.</h3>  
             <a href = "/login"><button>Login</button></a><br> 
             <a href = "/"><button>Inicio</button></a><br> 
         </div>
