--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,13 @@
         <a href="/logout"><button style="width:200px;height:20px">Logout (SALIDA SESIÓN)</button></a><br><br>
         <p><a href="/media_local"><button style="width:400px;height:20px">Botón de MEDIA de la BBDD Local (ElasticSearch)</button></a>&nbsp;&nbsp;&nbsp;&nbsp;<span style="border-image: initial; border: 1px solid black;"><i> {{mean_local}} </i>&nbsp;</span></p><br>
         <p><a href="/media_internet"><button style="width:400px;height:20px">Botón de MEDIA de la BBDD de Internet (Beebotte)</button></a>&nbsp;&nbsp;&nbsp;&nbsp;<span style="border-image: initial; border: 1px solid black;"><i> {{mean_beebotte}} </i>&nbsp;</span></p><br>
-        <a href="/graficas"><button>Generación de gráficas externas</button></a><br>
+        <a href="/graficas"><button>Generación de gráficas externas</button></a><br><br>
+        <form method = "POST" action = "/umbral1">  
+            <table>  
+                    <tr><td>Introducir el valor del umbral para obtener el histórico: </td><td><input type = 'number' name = 'umbral'></td></tr>  
+                    <tr><td><input type = "submit" value = "Submit"></td></tr>  
+                </table>   
+        </form>  
     </div>
 </body>
 </html>
