--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,8 @@
                     <tr><td><input type = "submit" value = "Submit"></td></tr>  
                 </table>   
         </form>  
+        <h3 class="centeredText">Número de veces que ha solicitado la media de la BBDD local como usuario: {{num_veces_elastic}}</h2>
+        <h3 class="centeredText">Número de veces que ha solicitado la media de la BBDD externa como usuario: {{num_veces_beebotte}}</h2>
     </div>
 </body>
 </html>
